--- a/DemoShop/DemoShop_editor/DemoShop.xml.ui
+++ b/DemoShop/DemoShop_editor/DemoShop.xml.ui
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Version>1.0.0.0</Version>
+  <filePath>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop\DemoShop.xml.ui</filePath>
+  <Version>1.1.0.0</Version>
   <Name>DemoShop</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\DemoShop</ProjectDir>
+  <ProjectDir>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop</ProjectDir>
   <JsonFileName>DemoShop.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\DemoShop\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\DemoShop\Json</JsonFolder>
+  <Resources>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop\Resources</Resources>
+  <JsonFolder>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop\Json</JsonFolder>
   <JsonList>
     <string>DemoShop.json</string>
   </JsonList>
   <imageFileList />
-  <bBatchImage>false</bBatchImage>
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>DemoShop.json</CurrentUIJson>
   <CanvasSize>
