--- a/DemoBag/DemoBag_editor/equip_backup/equip.xml.ui
+++ b/DemoBag/DemoBag_editor/equip_backup/equip.xml.ui
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Version>0.3.3.0</Version>
+  <filePath>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup\equip.xml.ui</filePath>
+  <Version>1.1.0.0</Version>
   <Name>equip</Name>
-  <ProjectDir>D:\工程目录\UI\备份文件\equip_backup</ProjectDir>
-  <SceneJson>equip.json</SceneJson>
-  <Resources>D:\工程目录\UI\备份文件\equip_backup\Resources</Resources>
-  <JsonFolder>D:\工程目录\UI\备份文件\equip_backup\Json</JsonFolder>
+  <ProjectDir>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup</ProjectDir>
+  <JsonFileName>equip.json</JsonFileName>
+  <Resources>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup\Resources</Resources>
+  <JsonFolder>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup\Json</JsonFolder>
   <JsonList>
     <string>equip_1.json</string>
   </JsonList>
   <imageFileList />
-  <bBatchImage>false</bBatchImage>
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>equip_1.json</CurrentUIJson>
   <CanvasSize>
