--- a/DemoMap/DemoMap_editor/DemoMap.xml.ui
+++ b/DemoMap/DemoMap_editor/DemoMap.xml.ui
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <filePath>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap\DemoMap.xml.ui</filePath>
   <Version>1.0.0.0</Version>
   <Name>DemoMap</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\DemoMap</ProjectDir>
+  <ProjectDir>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap</ProjectDir>
   <JsonFileName>DemoMap.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\DemoMap\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\DemoMap\Json</JsonFolder>
+  <Resources>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap\Resources</Resources>
+  <JsonFolder>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap\Json</JsonFolder>
   <JsonList>
     <string>DemoMap.json</string>
   </JsonList>
   <imageFileList />
-  <bBatchImage>false</bBatchImage>
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>DemoMap.json</CurrentUIJson>
   <CanvasSize>
