--- a/SampleHelloUI/SampleHelloUI_editor/UIButton_test.xml.ui
+++ b/SampleHelloUI/SampleHelloUI_editor/UIButton_test.xml.ui
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Version>0.3.2.0</Version>
+  <filePath>C:\Users\houlong\Desktop\SampleHelloUI_editor\UIButton_test.xml.ui</filePath>
+  <Version>0.3.3.0</Version>
   <Name>UIButton_test</Name>
-  <ProjectDir>D:\工程目录\UI\UIButton_test</ProjectDir>
-  <SceneJson>UIButton_test.json</SceneJson>
-  <Resources>D:\工程目录\UI\UIButton_test\Resources</Resources>
-  <JsonFolder>D:\工程目录\UI\UIButton_test\Json</JsonFolder>
+  <ProjectDir>C:\Users\houlong\Desktop\SampleHelloUI_editor</ProjectDir>
+  <JsonFileName>UIButton_test.json</JsonFileName>
+  <Resources>C:\Users\houlong\Desktop\SampleHelloUI_editor\Resources</Resources>
+  <JsonFolder>C:\Users\houlong\Desktop\SampleHelloUI_editor\Json</JsonFolder>
   <JsonList>
     <string>UITest.json</string>
   </JsonList>
   <imageFileList />
-  <bBatchImage>false</bBatchImage>
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>UITest.json</CurrentUIJson>
   <CanvasSize>
