--- a/SampleImageViewer/SampleImageViewer_editor/page.xml.ui
+++ b/SampleImageViewer/SampleImageViewer_editor/page.xml.ui
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Version>0.3.3.0</Version>
+  <filePath>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor\page.xml.ui</filePath>
+  <Version>1.1.0.0</Version>
   <Name>page</Name>
-  <ProjectDir>D:\工程目录\UI\page</ProjectDir>
-  <SceneJson>page.json</SceneJson>
-  <Resources>D:\工程目录\UI\page\Resources</Resources>
-  <JsonFolder>D:\工程目录\UI\page\Json</JsonFolder>
+  <ProjectDir>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor</ProjectDir>
+  <JsonFileName>page.json</JsonFileName>
+  <Resources>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor\Resources</Resources>
+  <JsonFolder>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor\Json</JsonFolder>
   <JsonList>
     <string>page_1.json</string>
   </JsonList>
   <imageFileList />
-  <bBatchImage>false</bBatchImage>
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>page_1.json</CurrentUIJson>
   <CanvasSize>
