--- a/DemoCowboyGame/EditorProjects/DemoUI/DemoHead_UI.xml.ui
+++ b/DemoCowboyGame/EditorProjects/DemoUI/DemoHead_UI.xml.ui
@@ -1,20 +1,20 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <filePath>E:\gitworkspace\CocoStudioSamples\DemoCowboyGame\EditorProjects\DemoUI\DemoHead_UI.xml.ui</filePath>
   <Version>1.0.0.1</Version>
   <Name>ui</Name>
-  <ProjectDir>C:\Users\Nite_Virtual_win\Documents\CocoProjects\CowboyDemoProject\DemoHead_UI</ProjectDir>
+  <ProjectDir>E:\gitworkspace\CocoStudioSamples\DemoCowboyGame\EditorProjects\DemoUI</ProjectDir>
   <JsonFileName>ui.json</JsonFileName>
-  <Resources>C:\Users\Nite_Virtual_win\Documents\CocoProjects\CowboyDemoProject\DemoHead_UI\Resources</Resources>
-  <JsonFolder>C:\Users\Nite_Virtual_win\Documents\CocoProjects\CowboyDemoProject\DemoHead_UI\Json</JsonFolder>
+  <Resources>E:\gitworkspace\CocoStudioSamples\DemoCowboyGame\EditorProjects\DemoUI\Resources</Resources>
+  <JsonFolder>E:\gitworkspace\CocoStudioSamples\DemoCowboyGame\EditorProjects\DemoUI\Json</JsonFolder>
   <JsonList>
     <string>DemoHead_UI.json</string>
   </JsonList>
   <imageFileList>
     <string>ui0.plist</string>
   </imageFileList>
-  <bBatchImage>false</bBatchImage>
   <JsonSuffix>.json</JsonSuffix>
-  <CurrentUIJson>DemoHead_UI.json</CurrentUIJson>
+  <CurrentUIJson />
   <CanvasSize>
     <Width>480</Width>
     <Height>320</Height>
