#4349 fixed commit ui projects

--- a/DemoMap/DemoMap_editor/DemoMap.xml.ui
+++ b/DemoMap/DemoMap_editor/DemoMap.xml.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <filePath>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap\DemoMap.xml.ui</filePath>
-  <Version>1.0.0.0</Version>
+  <filePath>D:\工作\2013\DemoMap_editor\DemoMap.xml.ui</filePath>
+  <Version>1.2.0.1</Version>
   <Name>DemoMap</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap</ProjectDir>
+  <ProjectDir>D:\工作\2013\DemoMap_editor</ProjectDir>
   <JsonFileName>DemoMap.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\DemoBag_editor\DemoMap\Json</JsonFolder>
+  <Resources>D:\工作\2013\DemoMap_editor\Resources</Resources>
+  <JsonFolder>D:\工作\2013\DemoMap_editor\Json</JsonFolder>
   <JsonList>
     <string>DemoMap.json</string>
   </JsonList>
