--- a/SampleImageViewer/SampleImageViewer_editor/page.xml.ui
+++ b/SampleImageViewer/SampleImageViewer_editor/page.xml.ui
@@ -1,20 +1,22 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <filePath>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor\page.xml.ui</filePath>
-  <Version>1.1.0.0</Version>
+  <ProjectDir>C:\Users\houlong\Desktop\SampleImageViewer_editor</ProjectDir>
+  <Version>1.3.0.0</Version>
+  <Resources>C:\Users\houlong\Desktop\SampleImageViewer_editor\Resources</Resources>
   <Name>page</Name>
-  <ProjectDir>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor</ProjectDir>
   <JsonFileName>page.json</JsonFileName>
-  <Resources>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Documents\Tencent Files\782622762\FileRecv\SampleImageViewer_editor\Json</JsonFolder>
+  <JsonFolder>C:\Users\houlong\Desktop\SampleImageViewer_editor\Json</JsonFolder>
   <JsonList>
     <string>page_1.json</string>
   </JsonList>
-  <imageFileList />
-  <JsonSuffix>.json</JsonSuffix>
-  <CurrentUIJson>page_1.json</CurrentUIJson>
   <CanvasSize>
     <Width>480</Width>
     <Height>320</Height>
   </CanvasSize>
+  <filePath>C:\Users\houlong\Desktop\SampleImageViewer_editor\page.xml.ui</filePath>
+  <ProjectType>UIProject</ProjectType>
+  <ResRelativePath />
+  <imageFileList />
+  <JsonSuffix>.json</JsonSuffix>
+  <CurrentUIJson>page_1.json</CurrentUIJson>
 </UIProject>
