--- a/SampleUIAnimation/SampleUIAnimation_editor/SampleUIAnimation.xml.ui
+++ b/SampleUIAnimation/SampleUIAnimation_editor/SampleUIAnimation.xml.ui
@@ -1,20 +1,22 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <Version>1.0.0.0</Version>
+  <ProjectDir>C:\Users\houlong\Desktop\SampleUIAnimation_editor</ProjectDir>
+  <Version>1.3.0.0</Version>
+  <Resources>C:\Users\houlong\Desktop\SampleUIAnimation_editor\Resources</Resources>
   <Name>SampleUIAnimation</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\SampleUIAnimation</ProjectDir>
   <JsonFileName>SampleUIAnimation.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\SampleUIAnimation\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\ui 工程文件\ui 工程文件\SampleUIAnimation\Json</JsonFolder>
+  <JsonFolder>C:\Users\houlong\Desktop\SampleUIAnimation_editor\Json</JsonFolder>
   <JsonList>
     <string>SampleUIAnimation.json</string>
   </JsonList>
-  <imageFileList />
-  <bBatchImage>false</bBatchImage>
-  <JsonSuffix>.json</JsonSuffix>
-  <CurrentUIJson>SampleUIAnimation.json</CurrentUIJson>
   <CanvasSize>
     <Width>480</Width>
     <Height>320</Height>
   </CanvasSize>
+  <filePath>C:\Users\houlong\Desktop\SampleUIAnimation_editor\SampleUIAnimation.xml.ui</filePath>
+  <ProjectType>UIProject</ProjectType>
+  <ResRelativePath />
+  <imageFileList />
+  <JsonSuffix>.json</JsonSuffix>
+  <CurrentUIJson>SampleUIAnimation.json</CurrentUIJson>
 </UIProject>
