--- a/DemoLogin/DemoLogin_editor/DemoLogin.xml.ui
+++ b/DemoLogin/DemoLogin_editor/DemoLogin.xml.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <filePath>C:\Users\houlong\Desktop\DemoBag_editor\DemoLogin\DemoLogin.xml.ui</filePath>
-  <Version>1.1.0.0</Version>
+  <filePath>C:\Users\houlong\Desktop\DemoLogin_editor\DemoLogin.xml.ui</filePath>
+  <Version>1.2.0.1</Version>
   <Name>register</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\DemoBag_editor\DemoLogin</ProjectDir>
+  <ProjectDir>C:\Users\houlong\Desktop\DemoLogin_editor</ProjectDir>
   <JsonFileName>register.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\DemoBag_editor\DemoLogin\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\DemoBag_editor\DemoLogin\Json</JsonFolder>
+  <Resources>C:\Users\houlong\Desktop\DemoLogin_editor\Resources</Resources>
+  <JsonFolder>C:\Users\houlong\Desktop\DemoLogin_editor\Json</JsonFolder>
   <JsonList>
     <string>DemoLogin.json</string>
   </JsonList>
