--- a/DemoShop/DemoShop_editor/DemoShop.xml.ui
+++ b/DemoShop/DemoShop_editor/DemoShop.xml.ui
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <filePath>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop\DemoShop.xml.ui</filePath>
-  <Version>1.1.0.0</Version>
+  <filePath>C:\Users\houlong\Desktop\DemoShop_editor\DemoShop.xml.ui</filePath>
+  <Version>1.2.0.1</Version>
   <Name>DemoShop</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop</ProjectDir>
+  <ProjectDir>C:\Users\houlong\Desktop\DemoShop_editor</ProjectDir>
   <JsonFileName>DemoShop.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\DemoBag_editor\DemoShop\Json</JsonFolder>
+  <Resources>C:\Users\houlong\Desktop\DemoShop_editor\Resources</Resources>
+  <JsonFolder>C:\Users\houlong\Desktop\DemoShop_editor\Json</JsonFolder>
   <JsonList>
     <string>DemoShop.json</string>
   </JsonList>
