--- a/DemoBag/DemoBag_editor/equip_backup/equip.xml.ui
+++ b/DemoBag/DemoBag_editor/equip_backup/equip.xml.ui
@@ -1,16 +1,19 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <filePath>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup\equip.xml.ui</filePath>
-  <Version>1.2.0.1</Version>
+  <ProjectDir>/Work/CCSSamples/DemoBag/DemoBag_editor/equip_backup</ProjectDir>
+  <Version>1.3.0.1</Version>
+  <Resources>/Work/CCSSamples/DemoBag/DemoBag_editor/equip_backup/Resources</Resources>
   <Name>equip</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup</ProjectDir>
   <JsonFileName>equip.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\DemoBag_editor\equip_backup\Json</JsonFolder>
+  <JsonFolder>/Work/CCSSamples/DemoBag/DemoBag_editor/equip_backup/Json</JsonFolder>
   <JsonList>
     <string>equip_1.json</string>
   </JsonList>
+  <filePath>/Work/CCSSamples/DemoBag/DemoBag_editor/equip_backup/equip.xml.ui</filePath>
+  <ProjectType>UIProject</ProjectType>
+  <ResRelativePath />
   <imageFileList />
+  <imagePngList />
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>equip_1.json</CurrentUIJson>
   <CanvasSize>
