--- a/DemoShop/DemoShop_editor/DemoShop.xml.ui
+++ b/DemoShop/DemoShop_editor/DemoShop.xml.ui
@@ -1,16 +1,19 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <filePath>C:\Users\houlong\Desktop\DemoShop_editor\DemoShop.xml.ui</filePath>
-  <Version>1.2.0.1</Version>
+  <ProjectDir>/Work/CCSSamples/DemoShop/DemoShop_editor</ProjectDir>
+  <Version>1.3.0.1</Version>
+  <Resources>/Work/CCSSamples/DemoShop/DemoShop_editor/Resources</Resources>
   <Name>DemoShop</Name>
-  <ProjectDir>C:\Users\houlong\Desktop\DemoShop_editor</ProjectDir>
   <JsonFileName>DemoShop.json</JsonFileName>
-  <Resources>C:\Users\houlong\Desktop\DemoShop_editor\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Desktop\DemoShop_editor\Json</JsonFolder>
+  <JsonFolder>/Work/CCSSamples/DemoShop/DemoShop_editor/Json</JsonFolder>
   <JsonList>
     <string>DemoShop.json</string>
   </JsonList>
+  <filePath>/Work/CCSSamples/DemoShop/DemoShop_editor/DemoShop.xml.ui</filePath>
+  <ProjectType>UIProject</ProjectType>
+  <ResRelativePath />
   <imageFileList />
+  <imagePngList />
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>DemoShop.json</CurrentUIJson>
   <CanvasSize>
