--- a/SampleChangeEquip/SampleChangeEquip_Editor/SampleChangeEquip_UI/SampleChangeEquip_UI/SampleChangeEquip_UI.xml.ui
+++ b/SampleChangeEquip/SampleChangeEquip_Editor/SampleChangeEquip_UI/SampleChangeEquip_UI/SampleChangeEquip_UI.xml.ui
@@ -1,18 +1,23 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
+  <ProjectDir>/Work/CCSSamples/SampleChangeEquip/SampleChangeEquip_Editor/SampleChangeEquip_UI/SampleChangeEquip_UI</ProjectDir>
   <Version>1.0.0.0</Version>
+  <Resources>/Work/CCSSamples/SampleChangeEquip/SampleChangeEquip_Editor/SampleChangeEquip_UI/SampleChangeEquip_UI/Resources</Resources>
   <Name>SampleChangeEquip_UI</Name>
-  <ProjectDir>C:\Users\houlong\Documents\CocoStudio\Samples\Ui\SampleChangeEquip_UI\SampleChangeEquip_UI</ProjectDir>
   <JsonFileName>SampleChangeEquip_UI.json</JsonFileName>
-  <Resources>C:\Users\houlong\Documents\CocoStudio\Samples\Ui\SampleChangeEquip_UI\SampleChangeEquip_UI\Resources</Resources>
-  <JsonFolder>C:\Users\houlong\Documents\CocoStudio\Samples\Ui\SampleChangeEquip_UI\SampleChangeEquip_UI\Json</JsonFolder>
+  <JsonFolder>/Work/CCSSamples/SampleChangeEquip/SampleChangeEquip_Editor/SampleChangeEquip_UI/SampleChangeEquip_UI/Json</JsonFolder>
   <JsonList>
     <string>SampleChangeEquip_UI_1.json</string>
   </JsonList>
+  <filePath>/Work/CCSSamples/SampleChangeEquip/SampleChangeEquip_Editor/SampleChangeEquip_UI/SampleChangeEquip_UI/SampleChangeEquip_UI.xml.ui</filePath>
+  <ProjectType>UIProject</ProjectType>
+  <ResRelativePath />
   <imageFileList>
     <string>SampleChangeEquip_UI0.plist</string>
   </imageFileList>
-  <bBatchImage>false</bBatchImage>
+  <imagePngList>
+    <string>SampleChangeEquip_UI0.png</string>
+  </imagePngList>
   <JsonSuffix>.json</JsonSuffix>
   <CurrentUIJson>SampleChangeEquip_UI_1.json</CurrentUIJson>
   <CanvasSize>
