--- a/SampleUIAnimation/SampleUIAnimation_editor/SampleUIAnimation.xml.ui
+++ b/SampleUIAnimation/SampleUIAnimation_editor/SampleUIAnimation.xml.ui
@@ -1,22 +1,23 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <UIProject xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
-  <ProjectDir>C:\Users\houlong\Desktop\SampleUIAnimation_editor</ProjectDir>
-  <Version>1.3.0.0</Version>
-  <Resources>C:\Users\houlong\Desktop\SampleUIAnimation_editor\Resources</Resources>
+  <ProjectDir>/Work/CCSSamples/SampleUIAnimation/SampleUIAnimation_editor</ProjectDir>
+  <Version>1.0.0.0</Version>
+  <Resources>/Work/CCSSamples/SampleUIAnimation/SampleUIAnimation_editor/Resources</Resources>
   <Name>SampleUIAnimation</Name>
   <JsonFileName>SampleUIAnimation.json</JsonFileName>
-  <JsonFolder>C:\Users\houlong\Desktop\SampleUIAnimation_editor\Json</JsonFolder>
+  <JsonFolder>/Work/CCSSamples/SampleUIAnimation/SampleUIAnimation_editor/Json</JsonFolder>
   <JsonList>
     <string>SampleUIAnimation.json</string>
   </JsonList>
+  <filePath>/Work/CCSSamples/SampleUIAnimation/SampleUIAnimation_editor/SampleUIAnimation.xml.ui</filePath>
+  <ProjectType>UIProject</ProjectType>
+  <ResRelativePath />
+  <imageFileList />
+  <imagePngList />
+  <JsonSuffix>.json</JsonSuffix>
+  <CurrentUIJson>SampleUIAnimation.json</CurrentUIJson>
   <CanvasSize>
     <Width>480</Width>
     <Height>320</Height>
   </CanvasSize>
-  <filePath>C:\Users\houlong\Desktop\SampleUIAnimation_editor\SampleUIAnimation.xml.ui</filePath>
-  <ProjectType>UIProject</ProjectType>
-  <ResRelativePath />
-  <imageFileList />
-  <JsonSuffix>.json</JsonSuffix>
-  <CurrentUIJson>SampleUIAnimation.json</CurrentUIJson>
 </UIProject>
